fix wrap

--- a/src/App.css
+++ b/src/App.css
@@ -361,7 +361,6 @@ h6 {
 	.flexbox {
     display: -webkit-flex;
     display: flex;
-    flex-wrap: wrap;
 	}
   .main {
     margin: 0 10px 0 0;
